--- a/src/site/notes/业务相关数据合规/业务相关/通用业务/财产线索来源合法性.md
+++ b/src/site/notes/业务相关数据合规/业务相关/通用业务/财产线索来源合法性.md
@@ -2,7 +2,7 @@
 {"dg-publish":true,"permalink":"/////","tags":["gardenEntry"]}
 ---
 
-
+[[业务相关数据合规/业务相关/通用业务/钉钉企业用户管理员权限\|钉钉企业用户管理员权限]]
 **-问：**法院在做财产保全的过程中，有无必要对申请人提供的财产线索来源的合法性进行审查？背景是现在许多案件中，财产线索信息都来源于所谓的第三方调查公司，缺乏合法性基础。顺便问下，有的律师说自己有非正式渠道可以查到财产信息，那公司作为委托人，风险多大？如何隔离？
 
 **-答1：**参考毒树之果，实践中可能还是会认的。如果要讨论《个保法》下的应然，那么没做告知同意，**没有合法性基础**，不符合合法正当原则。肯定不行。
